--- a/src/Questionaire/styles/singleOption.css
+++ b/src/Questionaire/styles/singleOption.css
@@ -62,11 +62,17 @@
   width: 100%;
   cursor: pointer;
 }
-.single-option.question-container .options-container .option:hover,
 .single-option.question-container .options-container .option.selected{
   -webkit-box-shadow:inset 0 0 0 2px var(--main-blue);
   -moz-box-shadow:inset 0 0 0 2px var(--main-blue);
   box-shadow:inset 0 0 0 2px var(--main-blue);
+}
+@media (hover: hover) {
+  .single-option.question-container .options-container .option:hover{
+    -webkit-box-shadow:inset 0 0 0 2px var(--main-blue);
+    -moz-box-shadow:inset 0 0 0 2px var(--main-blue);
+    box-shadow:inset 0 0 0 2px var(--main-blue);
+  }
 }
 .single-option.question-container .options-container .option>img{
   width: 48px;
@@ -97,10 +103,15 @@
   position: relative;
   top: -1px;
 }
-.single-option.question-container .options-container .option:hover .scale-no,
 .single-option.question-container .options-container .option.selected .scale-no{
   background-color: var(--main-blue);
   color: #FFF;
+}
+@media (hover: hover) {
+  .single-option.question-container .options-container .option:hover .scale-no{
+    background-color: var(--main-blue);
+    color: #FFF;
+  }
 }
 .single-option.question-container .options-container .option .text-container{
   flex: 1;
@@ -132,11 +143,17 @@
   -moz-box-shadow: inset 0 0 0 1px #DAE6E2;
   box-shadow: inset 0 0 0 1px #DAE6E2;
 }
-.single-option.question-container .options-container .option.option-with-helper:hover,
 .single-option.question-container .options-container .option.option-with-helper.selected{
   -webkit-box-shadow: inset 0 0 0 2px var(--main-blue);
   -moz-box-shadow: inset 0 0 0 2px var(--main-blue);
   box-shadow: inset 0 0 0 2px var(--main-blue);
+}
+@media (hover: hover) {
+  .single-option.question-container .options-container .option.option-with-helper:hover{
+    -webkit-box-shadow: inset 0 0 0 2px var(--main-blue);
+    -moz-box-shadow: inset 0 0 0 2px var(--main-blue);
+    box-shadow: inset 0 0 0 2px var(--main-blue);
+  }
 }
 .single-option.question-container .options-container .option.option-with-helper .q-text{
   font-weight: 500;
